<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_text">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="emptyLibrary">Ваша медиатека пуста</string>
    <string name="noPlaylist">Вы не создали\n ни одного плейлиста</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="favoriteTracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="media_library_button">Медиатека</string>
    <string name="settings_button">Настройки</string>
    <string name="dark_theme_title">Тёмная тема</string>
    <string name="share_app_title">Поделиться приложением</string>
    <string name="write_to_support_title">Написать в поддержку</string>
    <string name="privacy">Пользовательское соглашение</string>
    <string name="media_library_activity_text">MediaLibrary Activity</string>
    <string name="back_button">Back button</string>
    <string name="clear_button">Clear button</string>
    <string name="privacyUrl">https://yandex.ru/legal/practicum_offer/</string>
    <string name="cover_image">Cover image</string>
    <string name="dot_separator">Dot separator</string>
    <string name="arrow">Arrow</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="searched_text">Вы искали</string>
    <string name="clear_history_text">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="addButtonText">Добавить в коллекцию</string>
    <string name="playButtonText">Воспроизвести</string>
    <string name="likeButtonText">Нравится</string>
    <string name="create">Создать</string>
    <string name="description">Описание</string>
    <string name="albumName">Название*</string>
    <string name="photoPickerIcon">Иконка для PhotoPicker</string>
    <string name="albumCover">Обложка альбома</string>
    <string name="addToPlaylist">Добавить в плейлист</string>
    <string name="successfullyAdd">Добавлено в плейлист</string>
    <string name="notAddedToPlaylist">Трек уже добавлен в плейлист</string>
    <string name="completePlaylistCreation">Завершить создание плейлиста?</string>
    <string name="dataWillLost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="deleteTrack">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="share">Поделиться</string>
    <string name="editInfo">Редактировать информацию</string>
    <string name="deletePlaylist">Хотите удалить плейлист</string>
    <string name="deletePlaylistAnswer">Хотите удалить плейлист</string>
    <string name="emptyPlaylist">В этом плейлисте нет списка треков</string>
    <string name="noTracksForSharing">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="oneTrack">трек</string>
    <string name="someTracks">трека</string>
    <string name="manyTracks">треков</string>
    <string name="editPlaylist">Редактировать</string>
    <string name="save">Сохранить</string>

    <string name="sampleEmail">electro.passion92@gmail.com</string>
    <string name="sampleSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="sampleBodyMessage">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="sampleMessageForShare">https://practicum.yandex.ru/android-developer/</string>
    <string name="durationSample">00:00</string>

</resources>
