<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.presentation.SettingsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/panelHeader"
        style="@style/panelHeader"
        android:text="@string/settings_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/darkThemeTextView"
        style="@style/settings_text_style"
        android:layout_marginTop="24dp"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:text="@string/dark_theme_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/panelHeader" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/darkThemeSwitcherCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/darkThemeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/darkThemeTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/shareTextView"
        style="@style/settings_text_style"
        android:text="@string/share_app_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/darkThemeTextView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/shareImageView"
        style="@style/settings_activity_small_icon_style"
        android:contentDescription="@string/share_app_title"
        android:src="@drawable/share_ic_gray"
        app:layout_constraintBottom_toBottomOf="@+id/shareTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/shareTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/supportTextView"
        style="@style/settings_text_style"
        android:text="@string/write_to_support_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareTextView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/supportImageView"
        style="@style/settings_activity_small_icon_style"
        android:contentDescription="@string/write_to_support_title"
        android:src="@drawable/support"
        app:layout_constraintBottom_toBottomOf="@+id/supportTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/supportTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/privacyTextView"
        style="@style/settings_text_style"
        android:text="@string/privacy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportTextView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/privacyImageView"
        style="@style/settings_activity_small_icon_style"
        android:contentDescription="@string/privacy"
        android:src="@drawable/arrow"
        app:layout_constraintBottom_toBottomOf="@+id/privacyTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/privacyTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>