<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <ImageButton
        android:id="@+id/back_button_searchActivity"
        style="@style/back_button_style"
        android:backgroundTint="@color/transparent"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_button" />

    <TextView
        style="@style/panelHeader"
        android:text="@string/search_text"
        app:layout_constraintStart_toEndOf="@+id/back_button_searchActivity"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_editText"
        style="@style/edit_text_style"
        android:background="@drawable/rounded_edit_text"
        android:drawableStart="@drawable/search"
        android:hint="@string/search_text"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="@dimen/mediumIndent_dp"
        android:paddingEnd="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button_searchActivity" />

    <ImageButton

        android:id="@+id/clear_search_ediText"
        style="@style/clear_icon_style"
        android:background="@color/transparent"
        android:src="@drawable/clear_edit_text_button"
        app:layout_constraintBottom_toBottomOf="@+id/search_editText"
        app:layout_constraintEnd_toEndOf="@+id/search_editText"
        app:layout_constraintTop_toTopOf="@+id/search_editText"
        android:contentDescription="@string/clear_button" />

</androidx.constraintlayout.widget.ConstraintLayout>