<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.presentation.PlayerFragment">

    <androidx.core.widget.NestedScrollView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftBorder24dpPlayerActivity"
                style="@style/invisibleViewStyle"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/indent_24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightBorder24dp"
                style="@style/invisibleViewStyle"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/indent_24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftBorder16dp"
                style="@style/invisibleViewStyle"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/indent_16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightBorder16dp"
                style="@style/invisibleViewStyle"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/indent_16dp" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/textBarrierVertical"
                style="@style/invisibleViewStyle"
                app:barrierDirection="end"
                app:constraint_referenced_ids="countryDescription, albumDescription, durationDescription,yearDescription, genreDescription" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/textBarrierHorizontal"
                style="@style/invisibleViewStyle"
                app:barrierDirection="top"
                app:constraint_referenced_ids="durationDescription, durationValue" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/coverBarrier"
                style="@style/invisibleViewStyle"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="artistNamePlayerActivity" />

            <androidx.constraintlayout.widget.Group
                style="@style/invisibleViewStyle"
                app:constraint_referenced_ids="countryDescription, countryValue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/countryDescription"
                style="@style/trackInfoDescriptionStyle"
                android:layout_marginBottom="20dp"
                android:text="@string/country"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/leftBorder16dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/countryValue"
                style="@style/trackInfoValueStyle"
                app:layout_constraintBaseline_toBaselineOf="@+id/countryDescription"
                app:layout_constraintEnd_toEndOf="@id/rightBorder16dp"
                app:layout_constraintStart_toStartOf="@+id/textBarrierVertical" />

            <androidx.constraintlayout.widget.Group
                style="@style/invisibleViewStyle"
                app:constraint_referenced_ids="genreDescription, genreValue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/genreDescription"
                style="@style/trackInfoDescriptionStyle"
                android:text="@string/genre"
                app:layout_constraintBottom_toTopOf="@+id/countryDescription"
                app:layout_constraintStart_toStartOf="@+id/leftBorder16dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/genreValue"
                style="@style/trackInfoValueStyle"
                app:layout_constraintBaseline_toBaselineOf="@+id/genreDescription"
                app:layout_constraintEnd_toEndOf="@+id/rightBorder16dp"
                app:layout_constraintStart_toStartOf="@id/textBarrierVertical" />

            <androidx.constraintlayout.widget.Group
                style="@style/invisibleViewStyle"
                app:constraint_referenced_ids="yearDescription, yearValue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/yearDescription"
                style="@style/trackInfoDescriptionStyle"
                android:text="@string/year"
                app:layout_constraintBottom_toTopOf="@+id/genreDescription"
                app:layout_constraintStart_toStartOf="@+id/leftBorder16dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/yearValue"
                style="@style/trackInfoValueStyle"
                app:layout_constraintBaseline_toBaselineOf="@+id/yearDescription"
                app:layout_constraintEnd_toEndOf="@+id/rightBorder16dp"
                app:layout_constraintStart_toStartOf="@id/textBarrierVertical" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/collectionGroup"
                style="@style/invisibleViewStyle"
                app:constraint_referenced_ids="albumDescription, albumValue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/albumDescription"
                style="@style/trackInfoDescriptionStyle"
                android:text="@string/album"
                app:layout_constraintBottom_toTopOf="@+id/yearDescription"
                app:layout_constraintStart_toStartOf="@id/leftBorder16dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/albumValue"
                style="@style/trackInfoValueStyle"
                app:layout_constraintBaseline_toBaselineOf="@+id/albumDescription"
                app:layout_constraintEnd_toEndOf="@id/rightBorder16dp"
                app:layout_constraintStart_toEndOf="@+id/textBarrierVertical" />

            <androidx.constraintlayout.widget.Group
                style="@style/invisibleViewStyle"
                app:constraint_referenced_ids="durationValue, durationDescription" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/durationDescription"
                style="@style/trackInfoDescriptionStyle"
                android:text="@string/duration"
                app:layout_constraintBottom_toTopOf="@+id/albumDescription"
                app:layout_constraintStart_toStartOf="@id/leftBorder16dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/durationValue"
                style="@style/trackInfoValueStyle"
                app:layout_constraintBaseline_toBaselineOf="@+id/durationDescription"
                app:layout_constraintEnd_toEndOf="@id/rightBorder16dp"
                app:layout_constraintStart_toEndOf="@+id/textBarrierVertical" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/durationCurrentValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indent_4dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/durationSample"
                android:textSize="@dimen/textSize_14sp"
                app:layout_constraintBottom_toTopOf="@id/textBarrierHorizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playButton" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/addToCollectionButton"
                style="@style/playerButtonStyle"
                android:contentDescription="@string/addButtonText"
                android:src="@drawable/add_button"
                app:layout_constraintBottom_toBottomOf="@+id/playButton"
                app:layout_constraintEnd_toStartOf="@+id/playButton"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@id/leftBorder24dpPlayerActivity"
                app:layout_constraintTop_toTopOf="@+id/playButton" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/playButton"
                style="@style/playerButtonStyle"
                android:layout_marginBottom="@dimen/indent_4dp"
                android:contentDescription="@string/playButtonText"
                android:src="@drawable/play_button"
                app:layout_constraintBottom_toTopOf="@+id/durationCurrentValue"
                app:layout_constraintEnd_toStartOf="@+id/favoriteButton"
                app:layout_constraintStart_toEndOf="@+id/addToCollectionButton"
                app:layout_constraintTop_toBottomOf="@id/coverBarrier"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/favoriteButton"
                style="@style/playerButtonStyle"
                android:contentDescription="@string/likeButtonText"
                android:src="@drawable/non_favorite_button"
                app:layout_constraintBottom_toBottomOf="@+id/playButton"
                app:layout_constraintEnd_toEndOf="@id/rightBorder24dp"
                app:layout_constraintStart_toEndOf="@+id/playButton"
                app:layout_constraintTop_toTopOf="@+id/playButton" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/artistNamePlayerActivity"
                style="@style/trackNameArtisStyle"
                android:layout_marginTop="@dimen/indent_12dp"
                android:textSize="@dimen/textSize_14sp"
                app:layout_constraintEnd_toEndOf="@id/rightBorder24dp"
                app:layout_constraintStart_toStartOf="@id/leftBorder24dpPlayerActivity"
                app:layout_constraintTop_toBottomOf="@+id/trackNamePlayerActivity"
                tools:text="asd" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/trackNamePlayerActivity"
                style="@style/trackNameArtisStyle"
                android:layout_marginTop="@dimen/indent_24dp"
                android:textSize="@dimen/textSize_22sp"
                app:layout_constraintEnd_toEndOf="@id/rightBorder24dp"
                app:layout_constraintStart_toStartOf="@id/leftBorder24dpPlayerActivity"
                app:layout_constraintTop_toBottomOf="@+id/album_cover"
                tools:text="1245" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/album_cover"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:contentDescription="@string/cover_image"
                android:src="@drawable/album"
                app:flow_verticalBias="0"
                app:layout_constrainedHeight="true"
                app:layout_constraintDimensionRatio="w, 1:1"
                app:layout_constraintEnd_toEndOf="@id/rightBorder24dp"
                app:layout_constraintStart_toStartOf="@id/leftBorder24dpPlayerActivity"
                app:layout_constraintTop_toBottomOf="@+id/back_button_playerActivity" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/back_button_playerActivity"
                style="@style/back_button_style"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/back_button"
                android:src="@drawable/back_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>