<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trackContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/transparent">

    <ImageView
        android:id="@+id/cover"
        android:layout_width="@dimen/coverSize_dp"
        android:layout_height="@dimen/coverSize_dp"
        android:layout_marginVertical="@dimen/smallIndent_dp"
        android:layout_marginStart="@dimen/mediumIndent_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/placeholder"
        android:contentDescription="@string/cover_image" />

    <TextView
        android:id="@+id/trackName"
        style="@style/track_text_style_songName"
        android:layout_marginTop="13dp"
        app:layout_constraintEnd_toStartOf="@+id/trackArrow"
        app:layout_constraintStart_toEndOf="@+id/cover"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/sampleLongText" />

    <TextView
        android:id="@+id/artistName"
        style="@style/track_text_style_artist"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cover"
        app:layout_constraintTop_toBottomOf="@+id/trackName"
        tools:text="@string/sampleLongText" />

    <ImageView
        android:id="@+id/dot_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dot_ic"
        app:layout_constraintBottom_toBottomOf="@+id/artistName"
        app:layout_constraintStart_toEndOf="@+id/artistName"
        app:layout_constraintTop_toTopOf="@id/artistName"
        app:tint="@color/YP_Text_Gray"
        android:contentDescription="@string/dot_separator" />

    <TextView
        android:id="@+id/trackDuration"
        style="@style/track_text_style_artist"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="@dimen/smallIndent_dp"
        android:ellipsize="none"
        app:layout_constrainedWidth="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/artistName"
        app:layout_constraintEnd_toStartOf="@id/trackArrow"
        app:layout_constraintStart_toEndOf="@+id/dot_point"
        tools:text="2:55" />

    <ImageView
        android:id="@+id/trackArrow"
        style="@style/settings_activity_small_icon_style"
        android:layout_marginTop="@dimen/largeIndent18"
        android:layout_marginEnd="@dimen/mediumIndent_dp"
        android:layout_marginBottom="@dimen/largeIndent19"
        android:src="@drawable/arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/arrow" />
</androidx.constraintlayout.widget.ConstraintLayout>